--- a/stjaume/css/stjaume.css
+++ b/stjaume/css/stjaume.css
@@ -1,6 +1,7 @@
 body {
     text-align: center;
     max-width: max-content;
+    width: 50%;
     margin: auto;
     background-color: #4b4b4b;
     background-image: url(../media/F05-Sant-Jaume-de-Frontanyà.jpg);
